--- a/client/src/app/order/order-summary/order-summary.component.html
+++ b/client/src/app/order/order-summary/order-summary.component.html
@@ -1,4 +1,4 @@
-<div px-2 px-md-5>
+<div class="px-2 mt-4 mt-md-0">
   <h5>Order Summary</h5>
   <div class="d-flex justify-content-between mt-4">
     <span class="">Item(s) total</span><span>{{ total | currency }}</span>
