--- a/client/src/app/shared/components/header/header.component.html
+++ b/client/src/app/shared/components/header/header.component.html
@@ -54,21 +54,7 @@
       </ul>
 
       <!-- Search Box -->
-      <form
-        class="d-flex mx-auto"
-        role="search"
-        style="max-width: 400px; width: 100%"
-      >
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-          [(ngModel)]="searchField"
-          (ngModelChange)="onSearchFieldChanged($event)"
-        />
-        <!-- <button class="btn btn-outline-primary" type="submit">Search</button> -->
-      </form>
+      <app-search />
 
       <!-- Sign In -->
       <!-- @if (!auth.token) { -->
