added dynamic toast messages; remove expired tokens from localstorage

--- a/client/src/app/order/order-summary/order-summary.component.html
+++ b/client/src/app/order/order-summary/order-summary.component.html
@@ -1,4 +1,4 @@
-<div class="px-2 mt-4 mt-md-0">
+<div class="px-2 mt-5 mt-lg-0">
   <h5>Order Summary</h5>
   <div class="d-flex justify-content-between mt-4">
     <span class="">Item(s) total</span><span>{{ total | currency }}</span>
@@ -15,7 +15,7 @@
     <span class="fw-bold">Order total</span
     ><span class="fw-bold">{{ totalWithDiscount | currency }}</span>
   </div>
-  <ol class="mt-4">
+  <!-- <ol class="mt-4">
     <li class="mt-4">
       Payment Methods
       <div class="d-flex justify-content-around">
@@ -76,5 +76,5 @@
         />
       </div>
     </li>
-  </ol>
+  </ol> -->
 </div>
