--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -221,6 +221,69 @@
               >
                 Place Order
               </button>
+
+              <ol class="mt-4">
+                <li class="mt-4">
+                  Payment Methods
+                  <div class="d-flex justify-content-around">
+                    <img
+                      class="img-fluid"
+                      src="assets/img/visa.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/AMEX.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/Discover.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/PayPal.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    />
+                  </div>
+                </li>
+                <li class="mt-4">
+                  Security Certification
+                  <div class="d-flex justify-content-around">
+                    <img
+                      class="img-fluid"
+                      src="assets/img/security%20certification%20%205.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/security%20certification%201.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/security%20certification%202.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    /><img
+                      class="img-fluid"
+                      src="assets/img/security%20certification%203.webp"
+                      width="120"
+                      height="80"
+                      style="width: 48px"
+                    />
+                  </div>
+                </li>
+              </ol>
             </div>
           </ng-container>
 
