--- a/client/src/app/shared/components/header/header.component.html
+++ b/client/src/app/shared/components/header/header.component.html
@@ -6,86 +6,55 @@
     border-bottom-style: solid;
   "
 >
-  <div class="container d-flex align-items-center justify-content-between">
-    <!-- Brand -->
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <span
-        class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"
-      >
-        <svg
-          class="bi bi-bezier"
-          xmlns="http://www.w3.org/2000/svg"
-          width="1em"
-          height="1em"
-          fill="currentColor"
-          viewBox="0 0 16 16"
+  <div class="container d-flex align-items-center">
+    <!-- Left Section -->
+    <div class="d-flex align-items-center flex-grow-1">
+      <a class="navbar-brand d-flex align-items-center me-3">
+        <span
+          class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"
         >
-          <path
-            fill-rule="evenodd"
-            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
-          />
-          <path
-            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"
-          />
-        </svg>
-      </span>
-      <span>REMU</span>
-    </a>
+          <!-- SVG ICON -->
+        </span>
+        <span>REMU</span>
+      </a>
 
-    <!-- Toggle -->
-    <button
-      class="navbar-toggler"
-      data-bs-toggle="collapse"
-      data-bs-target="#navcol-1"
-    >
-      <span class="visually-hidden">Toggle navigation</span>
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <!-- Nav Content -->
-    <div id="navcol-1" class="collapse navbar-collapse justify-content-between">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Bestsellers</a>
+          <a class="nav-link active">Bestsellers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">5-stars</a>
+          <a class="nav-link">5-stars</a>
         </li>
       </ul>
+    </div>
 
-      <!-- Search Box -->
-      <app-search />
+    <!-- Center Section (Search Box) -->
+    <div class="flex-grow-1 d-flex justify-content-center">
+      <app-search></app-search>
+    </div>
 
-      <!-- Sign In -->
-      <!-- @if (!auth.token) { -->
-      <div class="d-flex align-items-center">
-        <a
-          class="btn btn-outline-secondary position-relative me-2"
-          (click)="onSignInClick()"
-        >
-          Sign In
-        </a>
-      </div>
-      <!-- }  -->
-
-      @if (auth.token) {
-      <div class="d-flex align-items-center">
-        <span class="text-secondary me-2">
-          {{ auth.firstName }}
-        </span>
-      </div>
+    <!-- Right Section -->
+    <div class="d-flex align-items-center flex-grow-1 justify-content-end">
+      @if (!auth.token) {
+      <a
+        class="btn btn-outline-secondary position-relative me-2"
+        (click)="onSignInClick()"
+      >
+        Sign In
+      </a>
+      } @if (auth.token) {
+      <span class="text-secondary me-2">
+        {{ auth.firstName }}
+      </span>
       }
 
-      <!-- Cart Icon -->
-      <div class="d-flex align-items-center ms-2">
-        <a class="btn btn-outline-secondary position-relative">
-          <i
-            class="fa fa-cart-plus"
-            style="font-size: 26px; color: var(--bs-orange)"
-            [routerLink]="['/cart']"
-          ></i>
-        </a>
-      </div>
+      <a class="btn btn-outline-secondary position-relative ms-2">
+        <i
+          class="fa fa-cart-plus"
+          style="font-size: 26px; color: var(--bs-orange)"
+          [routerLink]="['/cart']"
+        ></i>
+      </a>
     </div>
   </div>
 </nav>
