--- a/client/src/app/shared/components/search/search.component.html
+++ b/client/src/app/shared/components/search/search.component.html
@@ -1,8 +1,4 @@
-<form
-  class="d-flex mx-auto"
-  role="search"
-  style="max-width: 400px; width: 100%"
->
+<form class="d-flex" role="search" style="width: 400px; max-width: 100%">
   <input
     class="form-control me-2"
     type="search"
@@ -11,5 +7,4 @@
     [(ngModel)]="searchField"
     (ngModelChange)="onSearchFieldChanged($event)"
   />
-  <!-- <button class="btn btn-outline-primary" type="submit">Search</button> -->
 </form>
