--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -27,7 +27,7 @@ form textarea.form-control:focus {
 
 /* Regular inputs */
 form input.form-control,
-form select.form-select,
+select.form-select,
 form textarea.form-control {
   border-width: 1px !important;
   border-color: gray !important;
