--- a/client/src/app/product/product-search/product-search.component.html
+++ b/client/src/app/product/product-search/product-search.component.html
@@ -31,4 +31,11 @@
     </div>
     }
   </div>
+
+  <!-- <div class="row mt-4">
+    <app-pagination
+      [productCount]="productCount"
+      (pageChangeEvent)="goToPage($event)"
+    />
+  </div> -->
 </div>
