--- a/client/src/app/shared/components/pagination/pagination.component.scss
+++ b/client/src/app/shared/components/pagination/pagination.component.scss
@@ -6,8 +6,21 @@
     }
 }
 
+
 .pagination-background {
-    background: black !important;
+    background-color: #fb7701 !important;
     color: white !important;
+  }
+
+
+nav>ul>li>a {
+    border: 1px solid gray !important; 
+    box-shadow: none !important;    
+    font-size: 18px;
 }
 
+// .page-item.disabled  {
+//     pointer-events: none !important;
+//     cursor: default !important;
+//   }
+  
