--- a/client/src/app/shared/components/pagination/pagination.component.html
+++ b/client/src/app/shared/components/pagination/pagination.component.html
@@ -4,7 +4,10 @@
 >
   <nav>
     <ul class="pagination" style="cursor: pointer">
-      <li class="page-item">
+      <li
+        class="page-item"
+        [class.disabled]="numberOfPages <= 1 || pageNo === 1"
+      >
         <a
           class="page-link"
           aria-label="Previous"
@@ -23,7 +26,7 @@
           >{{ page }}</a
         >
       </li>
-      <li class="page-item">
+      <li class="page-item" [class.disabled]="pageNo >= numberOfPages">
         <a
           class="page-link"
           aria-label="Next"
