--- a/client/src/app/checkout/checkout.component.html
+++ b/client/src/app/checkout/checkout.component.html
@@ -15,6 +15,13 @@
                   required
                   #firstName="ngModel"
                   (change)="saveCheckoutData()"
+                  [ngClass]="{
+                    'is-valid':
+                      firstName.valid && (firstName.dirty || firstName.touched),
+                    'is-invalid':
+                      firstName.invalid &&
+                      (firstName.dirty || firstName.touched)
+                  }"
                 />
                 <div
                   *ngIf="
@@ -37,6 +44,12 @@
                   required
                   #lastName="ngModel"
                   (change)="saveCheckoutData()"
+                  [ngClass]="{
+                    'is-valid':
+                      lastName.valid && (lastName.dirty || lastName.touched),
+                    'is-invalid':
+                      lastName.invalid && (lastName.dirty || lastName.touched)
+                  }"
                 />
                 <div
                   *ngIf="
@@ -61,6 +74,11 @@
                   required
                   #phone="ngModel"
                   (change)="saveCheckoutData()"
+                  [ngClass]="{
+                    'is-valid': phone.valid && (phone.dirty || phone.touched),
+                    'is-invalid':
+                      phone.invalid && (phone.dirty || phone.touched)
+                  }"
                 />
                 <div
                   *ngIf="phone.invalid && (phone.dirty || phone.touched)"
@@ -83,6 +101,12 @@
                   required
                   #address1="ngModel"
                   (change)="saveCheckoutData()"
+                  [ngClass]="{
+                    'is-valid':
+                      address1.valid && (address1.dirty || address1.touched),
+                    'is-invalid':
+                      address1.invalid && (address1.dirty || address1.touched)
+                  }"
                 />
                 <div
                   *ngIf="
@@ -111,6 +135,41 @@
                 />
               </div>
             </div>
+
+            <div class="row mb-4">
+              <div class="col">
+                <label class="form-label fw-bold">Zip/Postal Code</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="deliveryPostalCode"
+                  [(ngModel)]="checkoutData.deliveryAddress.deliveryPostalCode"
+                  required
+                  #deliveryPostalCode="ngModel"
+                  (change)="saveCheckoutData()"
+                  [ngClass]="{
+                    'is-valid':
+                      deliveryPostalCode.valid &&
+                      (deliveryPostalCode.dirty || deliveryPostalCode.touched),
+                    'is-invalid':
+                      deliveryPostalCode.invalid &&
+                      (deliveryPostalCode.dirty || deliveryPostalCode.touched)
+                  }"
+                />
+                <div
+                  *ngIf="
+                    deliveryPostalCode.invalid &&
+                    (deliveryPostalCode.dirty || deliveryPostalCode.touched)
+                  "
+                  class="alert"
+                >
+                  <div *ngIf="deliveryPostalCode.hasError('required')">
+                    <small>Delivery Zip/Postal Code is required.</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="row mb-4">
               <div class="col">
                 <div class="form-check">
@@ -180,14 +239,18 @@
           >
             <div class="col-12 col-md-6">
               <h6 class="fw-bold">Enter Credit Card Info</h6>
-              <div id="card-element" class="p-3 border rounded"></div>
+              <div
+                id="card-element"
+                class="p-3 border rounded"
+                style="border: 1px solid gray !important"
+              ></div>
 
-              <div class="col">
+              <div class="col mt-2">
                 <input
                   class="form-control"
                   type="text"
                   name="billingPostalCode"
-                  [(ngModel)]="billingPostalCode"
+                  [(ngModel)]="checkoutData.billingPostalCode"
                   required
                   placeholder="Zip or Postal Code"
                   #billingPostalCodeCtrl="ngModel"
