--- a/client/src/app/product/product-filter/product-filter.component.html
+++ b/client/src/app/product/product-filter/product-filter.component.html
@@ -1,5 +1,5 @@
 <section class="my-4">
-  <div class="row">
+  <div class="row d-flex justify-content-center align-items-center">
     <div class="col-12 col-md-4">
       <span class="fw-bold">Filter By:&nbsp; </span>
 
